# download-context

./: .gitignore  LICENSE  README.md  spec.md
app-swift/: Package.swift  README.md
app-swift/.build/: build.db  plugin-tools.yaml
app-swift/.build/arm64-apple-macosx/debug/: Ctx  plugin-tools-description.json
app-swift/.build/arm64-apple-macosx/debug/Ctx.dSYM/Contents/: Info.plist
app-swift/.build/arm64-apple-macosx/debug/Ctx.product/: Objects.LinkFileList
app-swift/.build/arm64-apple-macosx/debug/CtxApp.build/: AppDelegate.d  AppDelegate.swiftdeps  CoreBridge.d  CoreBridge.swiftdeps  CtxApp.emit-module.d  Models.d  Models.swiftdeps  SafariContextProvider.d  SafariContextProvider.swiftdeps  main.d  main.swiftdeps  master.priors  output-file-map.json  sources
app-swift/.build/arm64-apple-macosx/debug/ModuleCache/3HZ16IT1GY9D1/: CUPS-1HLHMKUB322XA.pcm  (+54 more)
app-swift/.build/arm64-apple-macosx/debug/Modules/: CtxApp.swiftdoc  CtxApp.swiftmodule  CtxApp.swiftsourceinfo
app-swift/Ctx/: CoreBridge.swift  CtxApp.swift  SafariContextProvider.swift
app-swift/Sources/CtxApp/: AppDelegate.swift  CoreBridge.swift  Models.swift  SafariContextProvider.swift
cli/: ctx
core-python/: README.md  pyproject.toml
core-python/ctx_core/: __init__.py  __main__.py  db.py  downloads.py  errors.py  hashing.py  main.py  paths.py  reconcile.py
core-python/migrations/: 0001_initial.sql
docs/: implementation-plan.md  json-contract.md  permissions.md  release.md  spec.md
scripts/: build_app.sh  build_cli.sh  build_core.sh  package_app.sh  run_smoke_tests.sh
tests/: test_core.py
(+107 files in other folders)
